alignment fixed
mas-position etc

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,8 +13,10 @@ img {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 386px;
-	height: 708px;
+	/*width: 386px;
+	height: 708px;*/
+	margin: 0;
+	padding: 0;
 }
 #blurBG {
 	-webkit-filter: blur(4px);
@@ -27,9 +29,13 @@ img {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 386px;
-	height: 708px;
-	mask-image: url(../images/masks/smash-1-mask-alpha.png);
-	-webkit-mask-image: url(../images/masks/smash-1-mask-alpha.png);
+	width: 100%;
+	height: 100%;
+	
+	mask-image: url(../images/masks/mask1-resize.png);
+	-webkit-mask-image: url(../images/masks/mask1-resize.png);	
+	-webkit-mask-size: 100% 100%;
+	-webkit-mask-repeat: no-repeat;
+	-webkit-mask-position: 0 0;
 	mask-type: alpha;
 }
